--- a/views/welcome.erb
+++ b/views/welcome.erb
@@ -8,7 +8,7 @@
 <form action = "/add" method = "post"><div>
 <input type = "submit" name = "add" value = "Add a bookmark" class="button" style="border:none">
 </div></form>
-<form action = "/view_bookmarks" method = "post"><div>
+<form action = "/bookmarks" method = "get"><div>
 <input type = "submit" name = "view" value = "View bookmarks" class="button" style="border:none">
 </div></form>
 </center>
