now bookmark list displays website titles, related test all passes

--- a/views/bookmarks/add.erb
+++ b/views/bookmarks/add.erb
@@ -5,8 +5,7 @@
 <center><br>
 <h3>Add a bookmark</h3><br>
 
-<form action = "/bookmarks" method = "post"><div>
-<input type = "text" name = "address" style="border:none">
-<input type = "submit" value = "Submit" class="button" style="border:none">
-</div></form>
+<form action = "/bookmarks" method = "post"><div><h2> name <input type = "text" name = "title" style="border:none"> url <input type = "text" name = "address" style="border:none"><input type = "submit" value = "Submit" class="button" style="border:none"></h2></div></form>
+
+<br><br><h6><a href="/">Go back to main</a></h6>
 </center>
