--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -2,8 +2,10 @@
   <link href="<%= url('/style.css') %>" rel="stylesheet" type="text/css" />
 </head>
 
-<h3><ul>
+<br><h3><ul>
   <% @bookmarks.each do |bookmark| %>
-    <li><%= bookmark%></li>
+    <li><a href = "<%= bookmark.url%>" target="_blank"><%= bookmark.title%></a></li>
   <% end %>
 </ul></h3>
+
+<br><h6>&nbsp;&nbsp;<a href="/">Go back to main</a></h6>
