--- a/views/welcome.erb
+++ b/views/welcome.erb
@@ -9,6 +9,6 @@
 <input type = "submit" name = "add" value = "Add a bookmark" class="button" style="border:none">
 </div></form>
 <form action = "/bookmarks" method = "get"><div>
-<input type = "submit" name = "view" value = "View bookmarks" class="button" style="border:none">
+<input type = "submit" value = "View bookmarks" class="button" style="border:none">
 </div></form>
 </center>
